syntax = "proto3";

package com.eycads.protocols.sdk.relation.commands;

import "google/protobuf/wrappers.proto";
import "scalapb/scalapb.proto";
import "sdk/alona_options.proto";
import "sdk/relation/relation_common.proto";

message ChildCreationRequest {
    option (com.eycads.customOptions.alona_message).type_id = 1000000;
    option (scalapb.message).extends = "com.eycads.sdk.protocols.RelationCommand";
    string id = 1;
    int32 child_type = 2;
    string child_description = 3;
    string child_id = 4;
    bool skip_acknowledgement = 5;
    google.protobuf.StringValue replyTo = 6;
}

message CreationAcknowledgementResponse {
    option (com.eycads.customOptions.alona_message).type_id = 1000001;
    option (scalapb.message).extends = "com.eycads.sdk.protocols.RelationCommand";
    string id = 1;
    int32 parent_type = 2;
    string parent_description = 3;
    string parent_id = 4;
    int32 child_type = 5;
    google.protobuf.StringValue replyTo = 6;
}

message GetRelationData {
    option (com.eycads.customOptions.alona_message).type_id = 1000002;
    option (scalapb.message).extends = "com.eycads.sdk.protocols.RelationCommand";
    string id = 1;
    com.eycads.protocols.sdk.relation.GetRelationType get_relation_type = 2;
    google.protobuf.StringValue replyTo = 3;
}
