syntax = "proto3";

package com.eycads.protocols.sdk.relation;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
    single_file: true
};

message EntityRelationData {
    option (scalapb.message).extends = "com.eycads.sdk.protocols.RelationData";
    CreationTimeRelationshipData creation_time_relationship_data = 1;
    RuntimeRelationshipData runtime_relationship_data = 2;
}

message CreationTimeRelationshipData {
    int32 parent_type = 1;
    string parent_id = 2;
    string parent_description = 3;
    bytes creation_command = 4;
    CreationStatus creation_status = 5;
    bool is_rogue_entity = 6;
    map<string, ChildRelationCreated> child_map = 7;
}

message RuntimeRelationshipData {
    map<string, RuntimeRelationCreated> runtime_map = 7;
}

message ChildRelationCreated {
    int32 child_type = 1;
    string child_id = 2;
    string child_description = 3;
    CreationStatus child_relation_status = 4;
    bool is_acknowledged = 5;
}

message RuntimeRelationCreated {
    RuntimeRelationshipType type = 1;
    int32 foreign_type = 2;
    string foreign_id = 3;
    string foreign_description = 4;
    CreationStatus runtime_relation_status = 5;
}

enum CreationStatus {
    PENDING = 0;
    SUCCESS = 1;
    FAILED = 2;
}

message ParentRelationOverride {
    int32 parent_type = 1;
    string parent_id = 2;
}

enum GetRelationType {
    ALL = 0;
    PARENT = 1;
    CHILD = 2;
}

enum RuntimeRelationshipType {
    OneToMany = 0;
    ManyToOne = 1;
    OneToOne = 2;
    ManyToMany = 3;
}
